--- a/recipes/jellofRice.html
+++ b/recipes/jellofRice.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Jellof Rice</h1>
-    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Ffree-photos-vectors%2Fjollof-rice&psig=AOvVaw0JDayiclkM_zk3gmKIo8tw&ust=1693653609481000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCOjc5sCliYEDFQAAAAAdAAAAABAE" alt="Cannot display">
+    <img src="Jellofrice.jpg" alt="Cannot display">
     <p>African pride jellof</p>
 
     <h2>Ingredients</h2>
